fix testing on JDK17 and updated readme